# repo-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
logs/: log_shape.py
src/: main.py
tests/: test_placeholder.py
