[tool.black]

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true
exclude = ".venv/*"

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "."

[tool.ruff]
line-length = 140
lint.ignore = ["E203", "E266"] #, "E501"]
lint.unfixable = ["F841", "F401", "E731"]
include = ["*.py", "src/*", "/tests/*"]
exclude = [
    "data/",
    ".mypy_cache/",
    ".pytest_cache/",
    "venv/",
    "*.ipynb",
    "*.ini",
]

[tool.interrogate]
fail-under = 70
verbose=2
ignore-module = true

[tool.poetry]
name = "repo-template"
version = "0.1.0"
description = "Python data repo template"
authors = ["Mikhael Gaster <mikhaelgaster@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
polars = "^0.20.31"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.10"
isort = "^5.13.2"
mypy = "^1.10.1"
pre = "^1.3.0"
pytest = "^8.2.2"
interrogate = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
