[project]
name = "repo-template"
version = "0.1.0"
description = ""
authors = [
    { name = "Mikhael Gaster", email = "mikhaelgaster@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.2",
    "ruff>=0.5.1",
    "isort>=5.13.2",
    "jupyter>=1.0.0",
    "mypy>=1.10.1",
    "pre-commit>=3.7.1",
    "pytest>=8.2.2",
    "types-lxml>=2024.4.14",
    "types-requests>=2.32.0.20240622",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/repo_template"]


[tool.black]

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true
exclude = ".venv/*"
follow_imports = "skip"


[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "."

[tool.ruff]
line-length = 140
lint.ignore = ["E203", "E266"] #, "E501"]
lint.unfixable = ["F841", "F401", "E731"]
include = ["*.py", "src/*", "/tests/*"]
exclude = [
    "data/",
    ".mypy_cache/",
    ".pytest_cache/",
    "venv/",
    "*.ipynb",
    "*.ini",
]
